samples/_failures_safe/1761665637_760b39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3e280c8.c: In function ‘main’:
./samples/SAFE/__tmp_d3e280c8.c:149:17: error: expected ‘;’ at end of input
  149 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_d3e280c8.c:149:9: error: expected declaration or statement at end of input
  149 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_d3e280c8.c:149:9: error: expected declaration or statement at end of input
